--- a/package.json
+++ b/package.json
@@ -10,17 +10,26 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "chart.js": "^4.2.1",
     "firebase": "^9.17.1",
+    "gsap": "^3.11.5",
     "js-cookie": "^3.0.1",
     "randomstring": "^1.2.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
-    "react-icons": "^4.7.1",
+    "react-icons": "^4.8.0",
+    "react-intersection-observer": "^9.4.3",
     "react-modal": "^3.16.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.8.2",
+    "react-scroll-trigger": "^0.6.14",
+    "react-spring": "^9.7.1",
     "react-toastify": "^9.1.1",
-    "write-excel-file": "^1.4.22"
+    "write-excel-file": "^1.4.22",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
