--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-VITE_HOST_URL=https://reacti.ai
-VITE_SERVER_URL=https://funny-gray-worm.cyclic.app
+# VITE_HOST_URL=https://reacti.ai
+# VITE_SERVER_URL=https://funny-gray-worm.cyclic.app
 
 
-# VITE_HOST_URL=http://localhost:5173
-# VITE_SERVER_URL=http://localhost:5000
+VITE_HOST_URL=http://localhost:5173
+VITE_SERVER_URL=http://localhost:5000
