--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.2",
     "react-scroll-trigger": "^0.6.14",
+    "react-scrollbars-custom": "^4.1.1",
     "react-spring": "^9.7.1",
     "react-toastify": "^9.1.1",
     "write-excel-file": "^1.4.22",
